--- a/garden_unipool/subgraph.yaml
+++ b/garden_unipool/subgraph.yaml
@@ -34,3 +34,36 @@ dataSources:
         - event: Withdrawn(indexed address,uint256)
           handler: handleWithdrawn
       file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: UniPool
+    network: kovan
+    source:
+      address: "0x5dA8196427475C0026B465454156f0D31236C88B"
+      startBlock: 28091544
+      abi: UniPool
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - OwnershipTransferred
+        - RewardAdded
+        - RewardPaid
+        - Staked
+        - Withdrawn
+      abis:
+        - name: UniPool
+          file: ./abis/UniPool.json
+      eventHandlers:
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: RewardAdded(uint256)
+          handler: handleRewardAdded
+        - event: RewardPaid(indexed address,uint256)
+          handler: handleRewardPaid
+        - event: Staked(indexed address,uint256)
+          handler: handleStaked
+        - event: Withdrawn(indexed address,uint256)
+          handler: handleWithdrawn
+      file: ./src/uniPoolMapping.ts
+
