--- a/garden_unipool/subgraph.yaml
+++ b/garden_unipool/subgraph.yaml
@@ -3,12 +3,12 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: givLm
+    name: GardenUnipoolTokenDistributor
     network: kovan
     source:
       address: "0x61296aEC102bE83Aaa350B408b5F6B9466F86Dd9"
       startBlock: 28091553
-      abi: givLm
+      abi: GardenUnipoolTokenDistributor
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -20,8 +20,8 @@ dataSources:
         - Staked
         - Withdrawn
       abis:
-        - name: givLm
-          file: ./abis/givLm.json
+        - name: GardenUnipoolTokenDistributor
+          file: ./abis/GardenUnipoolTokenDistributor.json
       eventHandlers:
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
@@ -33,14 +33,14 @@ dataSources:
           handler: handleStaked
         - event: Withdrawn(indexed address,uint256)
           handler: handleWithdrawn
-      file: ./src/mapping.ts
+      file: ./src/gardenUnipoolTokenDistributorMapping.ts
   - kind: ethereum/contract
-    name: UniPool
+    name: UnipoolTokenDistributor
     network: kovan
     source:
       address: "0x5dA8196427475C0026B465454156f0D31236C88B"
       startBlock: 28091544
-      abi: UniPool
+      abi: UnipoolTokenDistributor
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -52,8 +52,8 @@ dataSources:
         - Staked
         - Withdrawn
       abis:
-        - name: UniPool
-          file: ./abis/UniPool.json
+        - name: UnipoolTokenDistributor
+          file: ./abis/UnipoolTokenDistributor.json
       eventHandlers:
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
@@ -66,4 +66,33 @@ dataSources:
         - event: Withdrawn(indexed address,uint256)
           handler: handleWithdrawn
       file: ./src/uniPoolMapping.ts
+  - kind: ethereum/contract
+    name: UniswapV3RewardToken
+    network: kovan
+    source:
+      address: "0x6b66368EddB78E61179523cf21049af40f797F4E"
+      abi: UniswapV3RewardToken
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Approval
+        - OwnershipTransferred
+        - RewardPaid
+        - Transfer
+      abis:
+        - name: UniswapV3RewardToken
+          file: ./abis/UniswapV3RewardToken.json
+      eventHandlers:
+        - event: Approval(indexed address,indexed address,uint256)
+          handler: handleApproval
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: RewardPaid(indexed address,uint256)
+          handler: handleRewardPaid
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/uniswapV3RewardTokenMapping.ts
+
 
