--- a/garden_unipool/subgraph.kovan.yaml
+++ b/garden_unipool/subgraph.kovan.yaml
@@ -3,32 +3,10 @@ schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: MerkleDistro
-    network: xdai
-    source:
-      address: "0x8ECebE69d45d357e5aa2719999B69d7c65003932"
-      abi: MerkleDistro
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.5
-      language: wasm/assemblyscript
-      entities:
-        - Claimed
-        - OwnershipTransferred
-      abis:
-        - name: MerkleDistro
-          file: ./abis/MerkleDistro.json
-      eventHandlers:
-        - event: Claimed(uint256,address,address,uint256)
-          handler: handleClaimed
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-      file: ./src/xdai/merkleDistroMapping.ts
-  - kind: ethereum/contract
     name: TokenDistro
-    network: xdai
+    network: kovan
     source:
-      address: "0xf11aC05c97F8845f6b974e9e327129d36683cC90"
+      address: "0x95c76AEaDf98dbD5ef6E2acD8308E563302AF2e3"
       abi: TokenDistro
     mapping:
       kind: ethereum/events
@@ -66,12 +44,40 @@ dataSources:
           handler: handleRoleRevoked
         - event: StartTimeChanged(uint256,uint256)
           handler: handleStartTimeChanged
-      file: ./src/xdai/tokenDistroMapping.ts
+      file: ./src/kovan/tokenDistroMapping.ts
   - kind: ethereum/contract
-    name: givETHUnipoolTokenDistributor
-    network: xdai
+    name: UniswapV3RewardToken
+    network: kovan
     source:
-      address: "0x491f1Cc76d619061b833287F493136A2D52BB18e"
+      address: "0x6b66368EddB78E61179523cf21049af40f797F4E"
+      abi: UniswapV3RewardToken
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Approval
+        - OwnershipTransferred
+        - RewardPaid
+        - Transfer
+      abis:
+        - name: UniswapV3RewardToken
+          file: ./abis/UniswapV3RewardToken.json
+      eventHandlers:
+        - event: Approval(indexed address,indexed address,uint256)
+          handler: handleApproval
+        - event: OwnershipTransferred(indexed address,indexed address)
+          handler: handleOwnershipTransferred
+        - event: RewardPaid(indexed address,uint256)
+          handler: handleRewardPaid
+        - event: Transfer(indexed address,indexed address,uint256)
+          handler: handleTransfer
+      file: ./src/kovan/uniswapV3RewardTokenMapping.ts
+  - kind: ethereum/contract
+    name: balancerLiquidityMiningTokenDistributor
+    network: kovan
+    source:
+      address: "0x5dA8196427475C0026B465454156f0D31236C88B"
       startBlock: 28091544
       abi: UnipoolTokenDistributor
     mapping:
@@ -98,12 +104,12 @@ dataSources:
           handler: handleStaked
         - event: Withdrawn(indexed address,uint256)
           handler: handleWithdrawn
-      file: ./src/xdai/givETHUniPoolMapping.ts
+      file: ./src/kovan/balancerLiquidityMiningMapping.ts
   - kind: ethereum/contract
-    name: givHNYUnipoolTokenDistributor
-    network: xdai
+    name: givLiquidityMiningTokenDistributor
+    network: kovan
     source:
-      address: "0x00e97BCf2E9A5F6ECF006f89B094255263B16686"
+      address: "0x5dA8196427475C0026B465454156f0D31236C88B"
       startBlock: 28091544
       abi: UnipoolTokenDistributor
     mapping:
@@ -130,38 +136,4 @@ dataSources:
           handler: handleStaked
         - event: Withdrawn(indexed address,uint256)
           handler: handleWithdrawn
-      file: ./src/xdai/givHNYUniPoolMapping.ts
-  - kind: ethereum/contract
-    name: GardenUnipoolTokenDistributor
-    network: xdai
-    source:
-      address: "0x61296aEC102bE83Aaa350B408b5F6B9466F86Dd9"
-      startBlock: 28091553
-      abi: GardenUnipoolTokenDistributor
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.5
-      language: wasm/assemblyscript
-      entities:
-        - OwnershipTransferred
-        - RewardAdded
-        - RewardPaid
-        - Staked
-        - Withdrawn
-      abis:
-        - name: GardenUnipoolTokenDistributor
-          file: ./abis/GardenUnipoolTokenDistributor.json
-      eventHandlers:
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-        - event: RewardAdded(uint256)
-          handler: handleRewardAdded
-        - event: RewardPaid(indexed address,uint256)
-          handler: handleRewardPaid
-        - event: Staked(indexed address,uint256)
-          handler: handleStaked
-        - event: Withdrawn(indexed address,uint256)
-          handler: handleWithdrawn
-      file: ./src/xdai/gardenUnipoolTokenDistributorMapping.ts
-
-
+      file: ./src/kovan/givLiquidityMiningMapping.ts
